# mlops_training_pipeline

./: .gitignore  Makefile  README.md  config.yml  pyproject.toml
src/: pipeline.py  test_config.py
src/components/: comparison.py  features.py  model_registraion.py  store.py  training.py
src/utils/: analysis.py  get_config.py  timeseries_models.py
tests/: conftest.py
tests/components/: test_comparison.py  test_features.py  test_model_registration.py  test_store.py  test_training.py
tests/components/artifacts/: arima_stock_model.joblib  arima_valid_pred_open.parquet.gzip  data.parquet.gzip  lstm_stock_model.keras  lstm_valid_pred_open.parquet.gzip  ma_valid_pred_open.parquet.gzip  metrics  train_set.parquet.gzip  valid_set.parquet.gzip  x_train.parquet.gzip  x_valid.parquet.gzip
